--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,6 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="vertical"/>
-        <include layout="@layout/bottom"/>
+        <include layout="@layout/main_bottom"/>
     </LinearLayout>
 </LinearLayout>
