--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -58,7 +58,7 @@
             android:textSize="18sp"
             android:layout_below="@+id/password"
             android:layout_marginTop="55dp"
-            android:background="@drawable/ripple_btn"/>
+            android:background="@drawable/ripple_red_btn"/>
 
     </RelativeLayout>
 </RelativeLayout>
