--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <RelativeLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginBottom="5dp"
-        android:orientation="vertical" >
-
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/view_pager"
+        android:layout_height="match_parent">
+        <View
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center" >
-        </androidx.viewpager.widget.ViewPager>
-
-        <RelativeLayout
+            android:background="@color/purple_200"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="随便点点"/>
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true">
-            <LinearLayout
-                android:id="@+id/dotgroup"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:paddingTop="23dp"
-                android:paddingRight="10dp"
-                android:gravity="center"
-                android:layout_marginBottom="15dp"
-                android:orientation="horizontal" >
-            </LinearLayout>
-        </RelativeLayout>
-    </RelativeLayout>
+            app:behavior_hideable="false"
+            app:behavior_peekHeight="200dp"
+            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <include layout="@layout/event_top"/>
+                    <include layout="@layout/event_center"/>
+                    <include layout="@layout/event_bottom"/>
+                </LinearLayout>
+            </ScrollView>
+        </androidx.core.widget.NestedScrollView>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </RelativeLayout>
