--- a/app/src/main/res/drawable/text_round_indianred_bg.xml
+++ b/app/src/main/res/drawable/text_round_indianred_bg.xml
@@ -2,10 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@color/white"/>
-    <stroke
-        android:width="0.5dp"
-        android:color="@color/black"/>
+        android:color="#FF6E6E"/>
     <corners
-        android:radius="10dp"/>
+        android:radius="6dp"/>
 </shape>
